--- a/assets/css/extended/post-single-override.css
+++ b/assets/css/extended/post-single-override.css
@@ -58,7 +58,7 @@
   padding: 2px 4px;
   font-size: 0.86em;
   line-height: 1.5;
-  border-radius: 12px;
+  border-radius: 4px;
   color: var(--code-color);
   font-family: "Geist Mono", monospace;
   font-weight: 400;
